create header for landing page.
In this commit I added the content for the header of the page including
the header links and logo placeholder.

--- a/index.html
+++ b/index.html
@@ -4,4 +4,13 @@
         <meta charset="utf-8">
         <title>TOP Landing Page</title>
     </head>
+
+    <body>
+        <div class="header">
+            <h1>Header Logo</h1>
+            <a href="#">header link one</a>
+            <a href="#">header link two</a>
+            <a href="#">header link three</a>
+        </div>
+    </body>
 </html>
