add content for title and sign up section
Here the website title and description content, as well as the sign-up
button and an img placeholder were added to the html file.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
 
     <body>
         <div class="header">
-            <h1>Header Logo</h1>
+            <p>Header Logo placeholder<p> <!--return to add an img here-->
             <a href="#">header link one</a>
             <a href="#">header link two</a>
             <a href="#">header link three</a>
+        </div>
+        <div class="intro-sign-up">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+            <button>Sign Up</button>
+            <div>
+                <p>this is a placeholder for an img</p> <!--add an img here-->
+            </div>
         </div>
     </body>
 </html>
