create skeleton for information section
Here I finally realized the intention was to add my own content and
images to the webpage as my own choice as opposed to replicating the
nonsensical placeholders provided in the example.  As a result I
created a skeleton for the structure of the content I will add, to be
modified when I decide the focus of my project's content.

--- a/index.html
+++ b/index.html
@@ -20,5 +20,15 @@
                 <p>this is a placeholder for an img</p> <!--add an img here-->
             </div>
         </div>
+        <div class="information">
+            <img>
+                <p>this is some subtext under an illustration of image</p>
+            <img>
+                <p>this is some subtext under an illustration or image</p>
+            <img>
+                <p>this is some subtext under an illustration or image</p>
+            <img>
+                <p>this is some subtext under an illustration or image</p>        
+        </div>
     </body>
 </html>
