--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
             <img>
                 <p>this is some subtext under an illustration or image</p>        
         </div>
+        <div class="testimonial">
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="author">-Thor, God of Thunder</p>
+        </div>
     </body>
 </html>
