create copyright footer

--- a/index.html
+++ b/index.html
@@ -39,5 +39,8 @@
             <p>Sign up for our product by clicking that button right over there!</p>
             <button>Sign Up</button>
         </div>
+        <div class="footer">
+            <p>Copyright &copy The Odin Project 2021</p>
+        </div>
     </body>
 </html>
